Auth/user/profile split, Swagger flottari, Gender enum